# nihongo-it-anki

./: .gitignore  ANKIWEB-README.md  MEMO.md  README.md  VOCABULARY-TAXONOMY-AUDIT.md  ankiweb-share.md  pyproject.toml  software-engineering-vocabulary-1000.md  tier1-vocabulary.csv  tier2-vocabulary.csv  tier3-vocabulary.csv  tier4-vocabulary.csv  tier5-vocabulary.csv  tier6-vocabulary.csv
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_issue.yml
experiments/kokoro-pause-test/: evaluation.md  generate_experiment.py  pause_variations.csv
scripts/: add_key_meanings.py  add_tts_column.py  create_deck.py  fix_adverb_commas.py  fix_ga_commas.py  generate_audio.py  generate_conjugations.py  migrate_taxonomy.py  pronunciation.py  sample.py  validate.py
