[project]
name = "nihongo-it-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi>=1.5.2",
    "genanki>=0.13.1",
    "jaconv>=0.4.1",
    "kokoro>=0.9.4",
    "mojimoji>=0.0.13",
    "pyopenjtalk>=0.4.1",
    "soundfile>=0.13.1",
    "unidic-lite>=1.0.8",
]
